# trabalho1

./: CMakeLists.txt  main.c  ordenacao.h
